<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/icons"
    tools:context=".MainActivity"
    android:fitsSystemWindows="true"
    android:padding="30dp">

    <ImageView
        android:layout_width="204dp"
        android:layout_height="145dp"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:padding="15dp"
        android:src="@drawable/logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_login_usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <EditText
            android:id="@+id/editText_usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/editText_usuario"
            android:inputType="text"
            android:textSize="18sp"
            android:autofillHints="" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_login_contraseña"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/editText_contraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/editText_contraseña"
            android:inputType="textPassword"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/boton_iniciar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_rounded"
        android:text="@string/iniciar_sesion"
        android:textColor="@color/txt_btn"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:onClick="iniciarSesion" />

    <Button
        android:id="@+id/btn_registro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_rounded"
        android:text="Registrarse"
        android:textColor="@color/txt_btn"
        android:textAllCaps="false"
        android:textSize="18sp" />

</LinearLayout>